# PhishShield-project

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
app/api/: main.py  routes.py  schemas.py
app/core/: analyzer.py  context.py  extractors.py  rule_engine.py  scoring.py  types.py
app/rules/: pack_default.yml
app/services/: cache.py  url_reputation.py
app/utils/: text_norm.py
docker/: docker-compose.yml
tests/: test_context_rules.py  test_extractors.py  test_reputation_rule.py  test_smoke_engine.py
ui/: Dockerfile  README.md  package-lock.json  vite.config.ts
ui/src/: App.tsx  styles.css
ui/src/api/: client.ts  types.ts
ui/src/components/: AnalyzerForm.tsx  HighlightedText.tsx  ResultsPanel.tsx  RulePackPanel.tsx  SeverityBadge.tsx
ui/src/lib/: buildAnalyzedText.ts  clipboard.ts  highlightSegments.ts
