[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishshield"
version = "0.1.0"
description = "Defensive email analysis engine with explainable risk scoring"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.26",
  "ruff>=0.4",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["rules/*.yml", "rules/yara/*.yar"]

